tdf#156978 SwNavigator: fix gtk3 crash on treeview get_sensitive

Change-Id: Ife866103b61940138cd044c666e0556760dcefa8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156272
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>